# rss-scout

./: .gitignore  Cargo.toml  check-new-scout.sh  com.user.rss-scout.plist  feeds.toml  filter_entries.py  parse_feed.py  rss-scout.sh
docs/: notion-integration.md  refactor-spec.md  roadmap.md
src/: config.rs  dedup.rs  discover.rs  fetcher.rs  filter.rs  main.rs  opml.rs  parser.rs  report.rs  scorer.rs
